<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textSize="50sp"
            android:gravity="center_horizontal"
            android:paddingTop="30sp"
            android:paddingBottom="30sp"
            />

        <Button

            android:id="@+id/btn_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpleNotification"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/btn_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actionNotification"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/btn_simple"
            />
        <Button
            android:id="@+id/btn_remote_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remoteInputNotification"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/btn_action"
            />
        <Button
            android:id="@+id/btn_big_picture_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bigPictureStyleNotification"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/btn_remote_input"
            />
        <Button
            android:id="@+id/btn_big_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bigTextStyleNotification"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/btn_big_picture_style"
            />
        <Button
            android:id="@+id/btn_inbox_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inboxStyleNotification"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/btn_big_text_style"
            />
        <Button
            android:id="@+id/btn_media_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mediaStyleNotification"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/btn_inbox_style"
            />
        <Button
            android:id="@+id/btn_messaging_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/messagingStyleNotification"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/btn_media_style"
            />
        <Button
            android:id="@+id/btn_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/progressViewNotification"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/btn_messaging_style"
            />
        <Button
            android:id="@+id/btn_custom_heads_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customHeadsUpViewNotification"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/btn_progress"
            />
        <Button
            android:id="@+id/btn_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customViewNotification"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/btn_custom_heads_up"
            />
        <Button
            android:id="@+id/btn_clear_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clearAllNotification"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/btn_custom"
            />
    </LinearLayout>
</ScrollView>